[package]
name = "cas_core_lib"
version = "0.1.8"
edition = "2021"
description = "This is a Rust library providing external facing functions to performant and trusted encryption in Rust"
license = "Apache-2.0"

[lib]
name="cas_core_lib"
path = "src/lib.rs"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_07 = { package = "rand", version = "0.7.0" }
libc = "0.2.146"
x25519-dalek = {version = "2.0.0", features = ["static_secrets"]}
cas-lib = {path = "../cas-lib"}

[profile.dev.package.num-bigint-dig]
opt-level = 3

[dependencies.ed25519-dalek]
version = "1"
