[package]
name = "cas_core_lib"
version = "0.2.8"
edition = "2021"
description = "This is a Rust library providing external facing functions to performant and trusted encryption in Rust"
license = "Apache-2.0"

[lib]
name="cas_core_lib"
path = "src/lib.rs"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.146"
cas-lib = "0.2.84"
zeroizing-alloc = "0.1.0"

[build-dependencies]
# Generates the C# P/Invoke bindings (NativeMethods.g.cs) consumed by cas-dotnet-sdk
# directly from this crate's `extern "C"` surface. See issue #190 / cas-core-lib#79.
csbindgen = "1.9"
